--- a/style/main.css
+++ b/style/main.css
@@ -314,36 +314,34 @@ hr {
     z-index: 10;
     font-size: 55px; }
   .tile.tile-2 .tile-inner {
-    /*background: #eee4da;*/
     background: url('../title-sets/thumb/george-washington_thumb.jpg');
     background-size: 100%;
     color: rgba(0,0,0,0);
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-4 .tile-inner {
-    /*background: #ede0c8;*/
     background: url('../title-sets/thumb/thomas-jefferson_thumb.jpg');
     background-size:100%;
     color: rgba(0,0,0,0);
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-8 .tile-inner {
-    color: #f9f6f2;
-    background: #f2b179; 
+    background-size:100%;
+    color: rgba(0,0,0,0);
     background: url('../title-sets/thumb/abraham-lincoln_thumb.jpg');}
   .tile.tile-16 .tile-inner {
-    color: #f9f6f2;
-    background: #f59563;
+    background-size:100%;
+    color: rgba(0,0,0,0);
     background: url('../title-sets/thumb/alexander-hamilton_thumb.jpg'); }
   .tile.tile-32 .tile-inner {
-    color: #f9f6f2;
-    background: #f67c5f; 
+    background-size:100%;
+    color: rgba(0,0,0,0); 
     background: url('../title-sets/thumb/andrew-jackson_thumb.jpg');}
   .tile.tile-64 .tile-inner {
-    color: #f9f6f2;
-    background: #f65e3b; 
+    background-size:100%;
+    color: rgba(0,0,0,0); 
     background: url('../title-sets/thumb/ulysses-s-grant_thumb.jpg');}
   .tile.tile-128 .tile-inner {
-    color: #f9f6f2;
-    background: #edcf72;
+    background-size:100%;
+    color: rgba(0,0,0,0);
     background: url('../title-sets/thumb/benjamin-franklin_thumb.jpg');
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286);
     font-size: 45px; }
@@ -351,8 +349,8 @@ hr {
       .tile.tile-128 .tile-inner {
         font-size: 25px; } }
   .tile.tile-256 .tile-inner {
-    color: #f9f6f2;
-    background: #edcc61;
+    background-size:100%;
+    color: rgba(0,0,0,0);
     background: url('../title-sets/thumb/silver-bars_thumb.jpg');
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.31746), inset 0 0 0 1px rgba(255, 255, 255, 0.19048);
     font-size: 45px; }
@@ -360,8 +358,8 @@ hr {
       .tile.tile-256 .tile-inner {
         font-size: 25px; } }
   .tile.tile-512 .tile-inner {
-    color: #f9f6f2;
-    background: #edc850;
+    background-size:100%;
+    color: rgba(0,0,0,0);
     background: url('../title-sets/thumb/gold-bars_thumb.jpg');
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381);
     font-size: 45px; }
@@ -369,8 +367,8 @@ hr {
       .tile.tile-512 .tile-inner {
         font-size: 25px; } }
   .tile.tile-1024 .tile-inner {
-    color: #f9f6f2;
-    background: #edc53f;
+    background-size:100%;
+    color: rgba(0,0,0,0);
     background: url('../title-sets/thumb/uncut-diamonds_thumb.jpg');
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571);
     font-size: 35px; }
@@ -378,8 +376,8 @@ hr {
       .tile.tile-1024 .tile-inner {
         font-size: 15px; } }
   .tile.tile-2048 .tile-inner {
-    color: #f9f6f2;
-    background: #edc22e;
+    background-size:100%;
+    color: rgba(0,0,0,0);
     background: url('../title-sets/thumb/bitcoin_thumb.jpg');
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
     font-size: 35px; }
